# ysyx_repo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
abstract-machine/: Makefile
abstract-machine/scripts/platform/: nemu.mk
nemu/: Kconfig  Makefile
nemu/include/cpu/: cpu.h
nemu/scripts/: config.mk
nemu/src/cpu/: cpu-exec.c
nemu/src/engine/interpreter/: init.c
nemu/src/isa/riscv32/: reg.c
nemu/src/monitor/: monitor.c
nemu/src/monitor/sdb/: expr.c  sdb.c  sdb.h  watchpoint.c
nemu/src/utils/: disasm.cc
nemu/tools/gen-expr/: gen-expr.c
npc/: .gitignore  CMakeLists.txt  Makefile
npc-archive/: .gitignore  CMakeLists.txt  Makefile
npc-archive/constr/: CodeTop.nxdc  Mux4Way2Bit.nxdc
npc-archive/csrc/: BarrelShift_sim.cpp  KeyboardDisplay_sim.cpp  LSFR_sim.cpp  light_sim.cpp
npc-archive/vsrc/: CodeTop.v  Encoder8to3.v  Mux4Way2Bit.v  MuxKeyInternal.v  PS2Keyboard.v  dff.v  light.v  shift.v
npc/constr/: ALU.nxdc  BarrelShift.nxdc  KeyboardDisplay.nxdc  LSFR.nxdc  shift.nxdc
npc/csrc/: ALU_sim.cpp  CodeTop_sim.cpp  Mux4Way2Bit_sim.cpp  main.cpp  shift_sim.cpp
npc/obj_dir/: Vlight.cpp  Vlight.h  Vlight.mk  Vlight___024root__DepSet_ha3c55810__0.cpp  Vlight___024root__DepSet_hbb020019__0.cpp  Vlight___024root__DepSet_hbb020019__0__Slow.cpp  Vlight__pch.h  Vtop.cpp  Vtop.mk  Vtop___024root__DepSet_heccd7ead__0.cpp  Vtop___024root__DepSet_heccd7ead__0__Slow.cpp
npc/src/main/: Elaborate.scala
npc/vsrc/: ALU.v  BarrelShift.v  CodeTop.v  KeyboardDisplay.v  LSFR.v  Mux4Way.v  Mux4Way2Bit.v  ScanCodeToASCII.v  Seg7Decoder.v  adder.v  shift.v  top.v
script/: nemu.mk
